--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
-#sentence {
+body {
   text-align: center;
   margin-top: 30%;
   margin-bottom: 30%;
   font-family: Tahoma;
   font-weight: 200;
   font-size: 300%;
+}
+
+.current {
+  text-decoration: underline;
+}
+
+.wrong {
+  color: red;
+}
+
+.correct {
+  color: green;
 }
